--- a/package.json
+++ b/package.json
@@ -24,5 +24,10 @@
   "bugs": {
     "url": "https://github.com/AkosSeres/mandelbrot-web/issues"
   },
-  "homepage": "https://github.com/AkosSeres/mandelbrot-web#readme"
+  "homepage": "https://github.com/AkosSeres/mandelbrot-web#readme",
+  "devDependencies": {
+    "eslint": "^7.18.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.22.1"
+  }
 }
