--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "mandelbrot-web",
   "version": "1.0.0",
   "description": "A fast Mandelbrot set viewer/renderer",
-  "main": "index.js",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack -t es5 --mode production --entry ./main.js && cp index.html dist/index.html"
   },
   "repository": {
     "type": "git",
@@ -28,6 +29,8 @@
   "devDependencies": {
     "eslint": "^7.18.0",
     "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-plugin-import": "^2.22.1"
+    "eslint-plugin-import": "^2.22.1",
+    "webpack": "^5.18.0",
+    "webpack-cli": "^4.4.0"
   }
 }
